hybridbank/manifests/cloud/postgres-standby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-core
  namespace: hybridbank
  labels:
    app: postgres-core
    app.kubernetes.io/part-of: hybridbank
    tier: database
    role: standby
spec:
  selector:
    matchLabels:
      app: postgres-core
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-core
        app.kubernetes.io/part-of: hybridbank
        tier: database
        role: standby
    spec:
      serviceAccountName: postgres-sa
      securityContext:
        runAsUser: 70
        fsGroup: 70
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata-core
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "hybridbank"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "hybridbank"]
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
      volumes:
        - name: pgdata-core
          persistentVolumeClaim:
            claimName: pgdata-core
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-core
  namespace: hybridbank
  labels:
    app: postgres-core
    app.kubernetes.io/part-of: hybridbank
spec:
  selector:
    app: postgres-core
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
